--- a/views/header.html
+++ b/views/header.html
@@ -6,6 +6,8 @@
 
 <link href="/public/bootstrap.min.css" rel="stylesheet">
 <link href="/public/bootstrap-select.min.css" rel="stylesheet">
+<link href="/public/custom.css" rel="stylesheet">
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
