--- a/views/messagearea.html
+++ b/views/messagearea.html
@@ -1,6 +1,7 @@
 <div id="messageArea" style="display:none;" class="row">
     <div class="col-md-6">
-        <h3 id="privateChannelName" style="color:#13B78C;"></h3>
+        <h3 id="privateChannelName" style="color:#13B78C; display:inline; margin-right: 10px;"></h3>
+        <button data-toggle="modal" data-target="#modalShareURL" id="modalButtonShareURL" class="btn btn-sm btn-default">Invite <i class="fa fa-share-square-o" aria-hidden="true"></i></button>
     </div>
     <div class="col-md-6">
         <div id="privateChannelButtons" class="btn-group btn-group-justified">
