--- a/views/modals.html
+++ b/views/modals.html
@@ -83,3 +83,26 @@
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
+<div id="modalShareURL" class="modal fade" tabindex="-1" role="dialog">
+  <div class="modal-dialog modal-sm" role="document">
+    <div class="modal-content" style="padding: 15px;">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="gridSystemModalLabel">Invite your friends</h4>
+      </div>
+      <div class="modal-body">
+        <div class="row">
+          <div class="col-md-12">
+            <label for="modalShareURLtextbox">Share this link:</label>
+            <div class="input-group">
+              <input onclick="this.setSelectionRange(0, this.value.length)" class="form-control" id="modalShareURLtextbox" type="text" style="cursor:default;" readonly>
+              <span class="input-group-btn">
+                <button data-clipboard-target="#modalShareURLtextbox" id="copyURLToClipboard" class="btn btn-primary" type="button">Copy</button>
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
